--- a/src/style.css
+++ b/src/style.css
@@ -5,13 +5,16 @@
 }
 
 body {
+    background: #3a4d39;
     margin: 0px;
     padding: 0px;
+    display: grid;
+    grid-template-rows: 5vh 95vh;
 }
 
 nav {
+    height: 100%;
     background: #739072;
-    height: 50px;
     align-items: center;
     display: flex;
     gap: 10px;
@@ -28,4 +31,27 @@ nav > button {
 
 nav > button:hover {
     background: #3a4d39;
+}
+
+#content {
+    height: 100%;
+    display: grid;
+    grid-template-rows: 1fr 10fr;
+    grid-template-columns: 2fr 1fr;
+}
+
+#content > img {
+    grid-row: 1 / 3;
+    height: 820px;
+}
+
+#content > h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
+#content > p {
+    font-size: 30px;
+    padding: 0px 30px;
+    text-align: center;
 }
