--- a/src/style.css
+++ b/src/style.css
@@ -16,9 +16,9 @@ nav {
     height: 100%;
     background: #739072;
     align-items: center;
+    justify-content: center;
+    gap: 15px;
     display: flex;
-    gap: 10px;
-    padding-left: 10px;
 }
 
 nav > button {
@@ -47,6 +47,7 @@ nav > button:hover {
 
 #content > h1 {
     text-align: center;
+    padding: 0px 10px;
     font-size: 50px;
 }
 
@@ -54,4 +55,34 @@ nav > button:hover {
     font-size: 30px;
     padding: 0px 30px;
     text-align: center;
+}
+
+#content > h1.menu {
+    grid-column: 1 / 3;
+}
+
+div.menu {
+    padding: 0px 200px;
+    display: grid;
+    height: 100%;
+    grid-column: 1/ 3;
+    gap: 50px;
+    justify-items: center;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+
+div.card {
+    padding: 30px 30px 0px 30px;
+    height: 100%;
+    background: #4f6f52;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.card > img {
+    object-fit: cover;
+    height: 250px;
+    width: 300px;
 }
