--- a/src/style.css
+++ b/src/style.css
@@ -86,3 +86,22 @@ div.card > img {
     height: 250px;
     width: 300px;
 }
+
+div.contact {
+    height: 100%;
+    padding-left: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+}
+
+div.info {
+    width: 700px;
+}
+
+div.info > p {
+    font-size: 20px;
+}
